russian spacings corrections and helvetica neue light

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Helvetica Neue Light';
-    src: local('Helvetica Neue Light'), url('../fonts/HelveticaNeueLight.ttf') format('truetype');
+    src: local('Helvetica Neue Light'), url('../fonts/HelveticaNeueLight.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
