--- a/scss/_newsletter.scss
+++ b/scss/_newsletter.scss
@@ -23,6 +23,12 @@ section.newsletter {
         }
     }
 
+    .btn{
+        padding-right:0;
+        padding-left:0;
+        width:160px;
+    }
+
     .auctus-wm {
         img {
             margin-top: -370px;
